--- a/lxqt-config-session/autostartedit.ui
+++ b/lxqt-config-session/autostartedit.ui
@@ -6,18 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>296</width>
-    <height>118</height>
+    <width>316</width>
+    <height>183</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Edit</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Name:</string>
+   <item row="4" column="0" colspan="3">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
@@ -28,19 +31,6 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="3">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1" colspan="2">
-    <widget class="QLineEdit" name="nameEdit"/>
-   </item>
    <item row="1" column="0">
     <widget class="QLabel" name="label_3">
      <property name="text">
@@ -48,13 +38,30 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="commandEdit"/>
-   </item>
    <item row="2" column="1" colspan="2">
     <widget class="QCheckBox" name="trayCheckBox">
      <property name="text">
       <string>Wait for system tray</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="1" colspan="2">
+    <widget class="QLineEdit" name="nameEdit"/>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>Name:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="commandEdit"/>
+   </item>
+   <item row="3" column="1" colspan="2">
+    <widget class="QCheckBox" name="x11CheckBox">
+     <property name="text">
+      <string>Start only in x11</string>
      </property>
     </widget>
    </item>
@@ -64,6 +71,7 @@
   <tabstop>nameEdit</tabstop>
   <tabstop>commandEdit</tabstop>
   <tabstop>trayCheckBox</tabstop>
+  <tabstop>x11CheckBox</tabstop>
   <tabstop>buttonBox</tabstop>
   <tabstop>browseButton</tabstop>
  </tabstops>
